Bug 1609908 - Reset WebGL layer on resize. r=lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D60755